2003-05-14   Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb.framework/GSWRequest.h/.m:
		o added ivar _browserAcceptedEncodings
		o added -browserAcceptedEncodings
		o modified browserLanguages to use quality indicator
	* GSWeb.framework/GSWConstants.h/.m:
		o added GSWHTTPHeader_AcceptEncoding
	* GSWeb.framework/GSWResponse.h/.m:
		o added ivar _acceptedEncodings
		o added -acceptedEncodings
		o added -setAcceptedEncodings:
	* GSWeb.framework/GSWComponentRequestHandler.m:
		o set request  browserAcceptedEncodings to response
	* GSWeb.framework/GSWComponent.m:
		o set request  browserAcceptedEncodings to response
	* GSWeb.framework/NSData+Compress.h/.m:
		o added	
	* config.h.in
		o added HAVE_ZLIB

2003-05-14   Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb.framework/GSWResourceManager.m:
		o added warning in ISOLanguagesFromGSLanguages
		o asserts
	* GSWeb.framework/GSWApplication.m:
		o assert adaptor name length>0 in 
		   -adaptorWithName:arguments: and in -_initAdaptorsWithUserDefaults:
			
2003-04-19   Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWAdaptors/Apache/mod_gsweb.c:
		o added debug logs
	* GSWAdaptors/common/GSWConfig.c:
		o added debug logs, removed duplicate 
			pszParent string build
	* GSWAdaptors/common/GSWHTTPRequest.c:
		o logs

2003-04-09   Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWAdaptors/common/GSWUtils.c:
		o prefix logs with GSWeb[pid]
	* GSWAdaptors/common/GSWAppRequest.c:
		o improved logs
	* GSWApp.c/.h:
		o add instance handled request count and no response count
	* GSWConfig.c:
		o remove "GSWeb:" prefix in logs
		o initialize 
	* GSWApp.h:
		o renamed instance index
	* GSWLoadBalancing.c:
		o logs
	
2003-04-09   Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb.framework/GSWSessionTimeOut.m:
		o fix in -description
	* GSWeb.framework/GSWApplication.m:
		o build currentRunLop before calling -run
		o log allFrameworks when a component is not found
	* GSWeb.framework/GSWHyperlink.m: